# AskMyDocs

./: .env.example  .gitignore  CNAME  QUICK_START.md  RAG_README.md  README.md  README_STREAMLIT.md  app.py  claude_client.py  pyproject.toml  requirements-deploy.txt  requirements.txt  run.py  secrets.toml  snowflake_setup.sql  start.py  startup.sh  streamlit_app.py  streamlit_app_fallback.py  streamlit_main.py  test_azure_flow.py  test_logout.py  test_search.py  test_system.py
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/instructions/: ragapp-instructions.instructions.md  ragapp-rules.instructions.md
.github/prompts/: ragapp-prompt.prompt.md
.github/workflows/: main_askmydocs.yml
.streamlit/: config.toml  secrets.toml.example
config/: __init__.py  settings.py  settings_new.py
database/: init_database.py  mcp_instructions.md  setup_database.py  validate_setup.py
database/migrations/: 001_initial_schema.sql
docs/: COMMAND.md  PLANNING.md  TASK.md
examples/: rag-example.sql  streamlit_ui_example.py
src/: __init__.py
src/database/: __init__.py  client.py  client_new.py
src/generation/: __init__.py  agent.py  agent_new.py
src/ingestion/: __init__.py  embeddings.py  embeddings_new.py  orchestrator.py  orchestrator_new.py  processor.py  processor_simple.py
src/retrieval/: __init__.py  retriever.py
src/ui/: __init__.py  auth_config.py  login.py  logout.py  streamlit_app.py  streamlit_app_new.py
src/utils/: __init__.py  logging_config.py  logging_simple.py  (+2 more)
tests/: __init__.py  test_basic.py  test_system.py
